# video-analyst

./: .env.example  .gitignore  README.md  SKILL.md  package.json  pyproject.toml
.github/workflows/: publish-npm.yml  release.yml
scripts/: postinstall.js
src/video_analyst/: __init__.py  analyzer.py  cli.py  config.py  downloader.py  formatter.py  humanizer.py  models.py  styles.py
src/video_analyst/prompts/: system.py  templates.py
